# icfp2024

./: .gitignore  Cargo.toml  Make.zsh  README.md  README.org
comm/: get-languest-test.txt  get-scoreboard-lambdaman.txt  get-scoreboard.txt  lambdaman-post-17.txt  lambdaman-post-19.txt  lambdaman-post-20.txt  lambdaman-post-5.txt  lambdaman-post-7.txt  request-echo.txt  res.txt  response-encode.txt  test-3d-1.txt  test-3d-crash.txt  test-3d-normal.txt  test-int-to-string.txt  threed-post-1.txt  threed-post-2.txt  threed-post-3.txt  threed-post-4.txt
plot/: spaceship.gnuplot
problem/efficiency/: 4-strict.txt
problem/lambdaman/: 7.txt
solution/lambdaman/: 11.txt  12.txt  13.txt  14.txt  15.txt  17.txt  19.txt  20.txt  3.txt  4.txt  5.txt  7.txt  9.txt
solution/spaceship/: 1-2.txt  1-send-s.txt  10-2.txt  10-send-s.txt  10-send.txt  11-2.txt  11-send-s.txt  11-send.txt  11.txt  12-2.txt  12-send-s.txt  12-send.txt  12.txt  13-2.txt  13-send-s.txt  13-send.txt  14-2.txt  14-send-s.txt  14-send.txt  15-2.txt  15-send-s.txt  15-send.txt  16-2.txt  16-send-s.txt  16-send.txt  17-2.txt  17-send-s.txt  17-send.txt  18-2.txt  18-send-s.txt  18-send.txt  19-2.txt  19-send-s.txt  19-send.txt  2-2.txt  2-send-s.txt  2-send.txt  2.txt  20-2.txt  20-send-s.txt  (+42 more)
solution/threed/: 1.txt  2.txt  3.txt  4.txt  5.txt  test.txt  test2.txt
src/: lambdaman.rs  lang.rs  lib.rs  main.rs  prelude.rs  spaceship.rs  threed.rs
